# Pronexus

./: README.md
LLM_Prompts/: comments.md  generator.md  linter.md  similarity.md  style_guide.md  trend_brief.md
backend/: Dockerfile  comments.py  generator.py  linter.py  main.py  pyproject.toml  requirements.txt  runner.py  scraper.py  similarity.py  style_guide.py  task-definition.json  trend_brief.py
backend/corpus/: quality-examples.json  style_guide.json  trend_brief.json
