[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "anthropic>=0.86.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "praw>=7.8.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
